# sci-sonify

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  requirements.txt
docs/source/: accessors.rst  conf.py  examples.rst  index.rst  install.rst  internal_api.rst  overview.rst  sonification.rst  sonify.rst  soundmaps.rst  user_api.rst
docs/source/examples/: 01-climate-change.ipynb  02-exoplanet-transit.ipynb  template.ipynb
scisonify/: __init__.py  pandas.py  xarray.py
scisonify/core/: envelope.py  sonify.py  soundmaps.py  waveforms.py
scisonify/tests/: test_soundmaps.py
